resolve ui issues

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11067,7 +11067,7 @@ span.smilies-title {
 }
 
 .agbutton .error-msg{color: red;}
-.jw-sharing-dock-btn {
+.node-type-videogallery .jw-sharing-dock-btn {
   display: none;
 }
 
