--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -13498,7 +13498,7 @@ span.smilies-title img {
   color: red;
 }
 
-.jw-sharing-dock-btn {
+.node-type-videogallery .jw-sharing-dock-btn {
   display: none;
 }
 
