--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -1974,53 +1974,29 @@ footer .multiple-items-footer i.slick-next {
   right: 40px;
 }
 .view-front-end-global-search .view-content .itg-search-list {
-  overflow: hidden;
-  padding: 10px;
-}
-.view-front-end-global-search .view-content .itg-search-list .search-pic {
-  float: left;
-  margin-right: 10px;
-}
-.view-front-end-global-search .view-content .itg-search-list .search-detail {
-  display: block;
-  overflow: hidden;
-  word-wrap: break-word;
-  font-size: 14px;
-  font-size: 0.875rem;
-  line-height: 19px;
-  color: #323232;
-}
-.view-front-end-global-search .view-content li.itg-search-list {
   padding: 15px 0;
 }
-.view-front-end-global-search .view-content li.itg-search-list + li {
+.view-front-end-global-search .view-content .itg-search-list + li {
   border-top: 1px solid #ddd;
 }
-.view-front-end-global-search .view-content .search-pic {
+.view-front-end-global-search .view-content .itg-search-list .views-field-sm-field-custom-story-small-large-url {
   width: 144px;
   height: 107px;
-  overflow: hidden;
+  float: left;
 }
-.view-front-end-global-search .view-content .search-pic:empty {
-  display: none;
+.view-front-end-global-search .view-content .itg-search-list > .views-field-label, .view-front-end-global-search .view-content .itg-search-list > .search-detail {
+  padding-left: 154px;
 }
-.view-front-end-global-search .view-content .search-detail h2 {
-  font-size: 15px;
-  font-size: 0.9375rem;
-  line-height: 20px;
-  margin-bottom: 10px;
+.view-front-end-global-search .view-content .itg-search-list .views-field-label h2 {
+  font-size: 22px;
+  font-size: 1.375rem;
+  line-height: 28px;
+  margin-top: -5px;
 }
-.view-front-end-global-search .view-content .search-detail h2 a {
-  font-size: 15px;
-  font-size: 0.9375rem;
-  font-weight: 500;
-  line-height: 20px;
-}
-.view-front-end-global-search .view-content .search-detail h2 a:hover {
-  color: #1a3c8d;
-}
-.view-front-end-global-search .view-content .search-detail p {
-  display: none;
+.view-front-end-global-search .view-content .itg-search-list .views-field-label h2 a {
+  font-size: 22px;
+  font-size: 1.375rem;
+  line-height: 28px;
 }
 .view-front-end-global-search .view-content .social-share {
   display: inline-block;
